--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,20 @@ on: push
 
 jobs:
   mail:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: print hello world
         run: echo "Hello techie"
+
+      - name: clone repo with java
+        uses: actions/checkout@v4
+      
+      - name: set-up java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin' # See 'Supported distributions' for available options
+          java-version: '21'
+        
+      - name: print java file
+        run: java javafile.java
