update mail configfuration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,21 @@ jobs:
 
       - name: send mail using ci/cd
         if: ${{ always() }}
-        uses: devellany/send-mailer@v1.0.2
+        uses: dawidd6/action-send-mail@v3
         with:
-          host: smtp.gmail.com
-          port: 465
-          account: ${{secrets.MAIL_ADDRESS}}
+          server_address: smtp.gmail.com
+          server_port: 465
+
+          username: ${{secrets.MAIL_ADDRESS}}
           password: ${{secrets.MAIL_PASSWORD}}
-          sender: Bharathvaj
-          from: ${{secrets.MAIL_ADDRESS}}
-          to: bharathvajt.it2020@gmail.com
+
           subject: ${{github.job}} job of ${{github.repository}} has ${{job.status}}
           body: ${{github.job}} job in workflow ${{github.workflow}} of ${{github.repository}} has ${{job.status}}
+
+          to: bharathvajt.it2020@gmail.com
+          from: ${{secrets.MAIL_ADDRESS}}
+
+          
           # # Optional content type (defaults to text/plain)
           # contentType: text/plain
           # # Optional attachment files (JSON type. require property 'path')
