--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           subject: ${{github.job}} job of ${{github.repository}} has ${{job.status}}
           body: ${{github.job}} job in workflow ${{github.workflow}} of ${{github.repository}} has ${{job.status}}
 
-          to: bharathvajt.it2020@gmail.com
+          to: bharathvajt.it2020@gmail.com, bharathvaj.tech@gmail.com, bharathvajt20ug0035@gmail.com
           from: ${{secrets.MAIL_ADDRESS}}
 
           # # Optional content type (defaults to text/plain)
