--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
           # # Optional content type (defaults to text/plain)
           # contentType: text/plain
           # # Optional attachment files (JSON type. require property 'path')
-          attachments: ${{github.repository}}/README.md
+          attachments: ./README.md
