--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,4 @@ jobs:
 
           # # Optional content type (defaults to text/plain)
           # contentType: text/plain
-          # # Optional attachment files (JSON type. require property 'path')
-          attachments: ./README.md
+          attachments: attachments.zip,git.diff,./README.md
